--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,16 @@
-# Prerequisites
-*.d
+# Visual Studio cache and settings
+.vs/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
+# Build output
+[Bb]uild/
+[Dd]ebug/
+[Rr]elease/
+x64/
+Win32/
+
+# Other common files to ignore
 *.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
 *.exe
-*.out
-*.app
-
-# debug information files
-*.dwo
+*.pdb
+*.user
+*.suo
